# QuickChat-Backend

./: Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml
frontend/: config.py  config.txt  requirements.txt
frontend/designers/: chat.py  contacts.py  register.py
frontend/services/: authorization.py  chat.py  config.py  contacts.py  main.py
frontend/src/: main.py
frontend/src/designers/: login.py
frontend/src/services/: authorization.py  login_form.py  reqister_form.py
src/: centrifugo.json  config.json  db.sqlite3
src/apps/chat/: serializers.py  urls.py  views.py
src/apps/user/: dtos.py  models.py  serializers.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_alter_user_options_alter_user_managers_and_more.py  0005_remove_user_date_joined_remove_user_groups_and_more.py
src/config/: settings.py  urls.py
